--- a/nvme_esxi_7.adoc
+++ b/nvme_esxi_7.adoc
@@ -1,7 +1,7 @@
 ---
 sidebar: sidebar
 permalink: nvme_esxi_7.html
-keywords: nvme, esxi, ontap
+keywords: nvme, esxi, ontap, nvme/fc, hypervisor
 summary: Describes how to configure NVMe-oF for ESXi 7.x with ONTAP
 ---
 
