--- a/nvme_rhel_86.adoc
+++ b/nvme_rhel_86.adoc
@@ -273,7 +273,7 @@ sectype: none
 # nvme discover -t tcp -w 192.168.2.9 -a 192.168.2.57
 ----
 
-.	Run `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes. Ensure you pass a longer `ctrl_loss_tmo` period (such as say 30 minutes, which can be set through `-l 1800`) during the connect-all so that it would retry for a longer period in the event of a path loss. For example,
+.	Run `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes. Ensure you pass a longer `ctrl_loss_tmo` period (such as say 30 minutes, which can be set through `-l 1800`) during the connect-all so that it would retry for a longer period in the event of a path loss. For example:
 +
 ----
 # nvme connect-all -t tcp -w 192.168.1.8 -a 192.168.1.51 -l 1800
@@ -303,7 +303,7 @@ round-robin
 round-robin
 ----
 
-. Verify that the ONTAP namespaces properly reflect on the host. For example,
+. Verify that the ONTAP namespaces properly reflect on the host. For example:
 +
 ----
 # nvme list
@@ -315,21 +315,8 @@ Usage                Format         FW Rev
 -------------------  -----------    --------
 85.90 GB / 85.90 GB  4 KiB + 0 B    FFFFFFFF
 ----
-+
-Another example:
-+
-----
-# nvme list
-Node           SN                    Model                   Namespace
-------------   --------------------- ---------------------------------
-/dev/nvme0n1   81CZ5BQuUNfGAAAAAAAB  NetApp ONTAP Controller   1
 
-Usage                Format         FW Rev
--------------------  -----------    --------
-85.90 GB / 85.90 GB  4 KiB + 0 B    FFFFFFFF
-----
-
-. Verify that the controller state of each path is live and has proper ANA status. For example,
+. Verify that the controller state of each path is live and has proper ANA status. For example:
 +
 [subs=+quotes]
 ----
@@ -341,22 +328,8 @@ nvme-subsys1 - nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.5f5f2c4aa73b11e9967e
 +- nvme2 fc traddr=nn-0x203700a098dfdd91:pn-0x203a00a098dfdd91 host_traddr=nn-0x200000109b1c1205:pn-0x100000109b1c1205 *live optimized*
 +- nvme3 fc traddr=nn-0x203700a098dfdd91:pn-0x203d00a098dfdd91 host_traddr=nn-0x200000109b1c1205:pn-0x100000109b1c1205 *live optimized*
 ----
-+
-Another example:
-+
-[subs=+quotes]
-----
-#nvme list-subsys /dev/nvme0n1
-nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.56e362e9bb4f11ebbaded039ea165abc:subsystem.nvme_118_tcp_1
-\
-+- nvme0 tcp traddr=192.168.1.51 trsvcid=4420 host_traddr=192.168.1.8 *live optimized*
-+- nvme10 tcp traddr=192.168.2.56 trsvcid=4420 host_traddr=192.168.2.9 *live optimized*
-+- nvme15 tcp traddr=192.168.2.57 trsvcid=4420 host_traddr=192.168.2.9 *live non-optimized*
-+- nvme5 tcp traddr=192.168.1.52 trsvcid=4420 host_traddr=192.168.1.8 *live non-optimized*
-----
 
-. Verify that the NetApp plug-in displays proper values for each ONTAP namespace device. For example,
-
+. Verify that the NetApp plug-in displays proper values for each ONTAP namespace device. For example:
 +
 ----
 # nvme netapp ontapdevices -o column
@@ -383,37 +356,6 @@ NSID  UUID                                   Size
         "Namespace_Size" : 20971520
     }
   ]
-}
-----
-+
-Another example:
-+
-----
-# nvme netapp ontapdevices -o column
-Device       Vserver          Namespace Path
----------    -------          --------------------------------------------------
-/dev/nvme0n1 vs_tcp_118       /vol/tcpnvme_118_1_0_0/tcpnvme_118_n
-
-NSID  UUID                                   Size
-----  ------------------------------         ------
-1      4a3e89de-b239-45d8-be0c-b81f6418283c  85.90GB
-
-
-# nvme netapp ontapdevices -o json
-{
-"ONTAPdevices" : [
-    {
-     "Device" : "/dev/nvme0n1",
-      "Vserver" : "vs_tcp_118",
-      "Namespace_Path" : "/vol/tcpnvme_118_1_0_0/tcpnvme_118_ns",
-      "NSID" : 1,
-      "UUID" : "4a3e89de-b239-45d8-be0c-b81f6418283c",
-      "Size" : "85.90GB",
-      "LBA_Data_Size" : 4096,
-      "Namespace_Size" : 20971520
-    },
-  ]
-
 }
 ----
 
