SLES SP4 document

--- a/hu_sles_15SP4.adoc
+++ b/hu_sles_15SP4.adoc
@@ -70,7 +70,32 @@ include::_include/hu/reuse_hu_asa_configuration_note.adoc[]
 
 SUSE Linux Enterprise Server 15 SP4 OS is compiled to recognize ONTAP LUNs and automatically set all configuration parameters correctly for both ASA and non-ASA configuration.
 
-include::_include/hu/reuse_hu_recommended_settings.adoc[]
+The `multipath.conf` file must exist for the multipath daemon to start, but you can create an empty, zero- byte file using the command:
+`touch /etc/multipath.conf`
+ 
+The first time you create this file, you might need to enable and start the multipath services.
+
+There is no requirement to add anything directly to `multipath.conf` file, unless you have devices that you do not want to be managed by multipath or you have existing settings that override defaults.
+
+You can add the following syntax to the `multipath.conf` file to exclude the unwanted devices.
+
+Replace the `<DevId>` with the `WWID` string of the device you want to exclude. Use the following command to determine the `WWID`:
+
+
+.Example
+In this example, `sda` is the local SCSI disk that we need to blacklist.
+
+Steps
+1.	Run the following command to determine the `WWID`:
+
+
+2.	Add this `WWID` to the blacklist stanza in the `/etc/multipath.conf`:
+
+
+You should always check your `/etc/multipath.conf` file for legacy settings, especially in the defaults section, that may be overriding default settings.
+
+The table below shows the critical multipathd parameters for ONTAP LUNs and the required values. If a host is connected to LUNs from other vendors and any of these parameters are overridden, they will need to be corrected by later stanzas in `multipath.conf` that apply specifically to ONTAP LUNs. If this is not done, the ONTAP LUNs may not work as expected. These defaults should only be overridden in consultation with NetApp and/or OS vendor and only when the impact is fully understood.
+
 
 [cols=2]
 [options="header"]
