--- a/hu_sles_15SP4.adoc
+++ b/hu_sles_15SP4.adoc
@@ -85,12 +85,24 @@ Replace the `<DevId>` with the `WWID` string of the device you want to exclude. 
 .Example
 In this example, `sda` is the local SCSI disk that we need to blacklist.
 
-Steps
-1.	Run the following command to determine the `WWID`:
+.Steps
+. Run the following command to determine the `WWID`:
++
+----
+# /usr/lib/udev/scsi_id -gud /dev/sda
+360030057024d0730239134810c0cb833
+----
 
 
-2.	Add this `WWID` to the blacklist stanza in the `/etc/multipath.conf`:
-
+.	Add this `WWID` to the blacklist stanza in the `/etc/multipath.conf`:
++
+----
+blacklist {
+wwid	360030057024d0730239134810c0cb833
+devnode "^(ram|raw|loop|fd|md|dm-|sr|scd|st)[0-9]*" devnode "^hd[a-z]"
+devnode "^cciss.*"
+}
+----
 
 You should always check your `/etc/multipath.conf` file for legacy settings, especially in the defaults section, that may be overriding default settings.
 
