--- a/nvme_rhel_90.adoc
+++ b/nvme_rhel_90.adoc
@@ -299,7 +299,7 @@ Format         FW Rev
 4 KiB + 0 B   FFFFFFFF
 ----
 
-. Verify that the controller state of each path is live and has a proper ANA status. 
+. Verify that the controller state of each path is live and has a proper ANA status.
 For example (a),
 +
 ----
@@ -325,7 +325,7 @@ nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.56e362e9bb4f11ebbaded039ea165abc:su
 +- nvme5 tcp traddr=192.168.1.52 trsvcid=4420 host_traddr=192.168.1.8 live non-optimized
 ----
 
-. Verify the NetApp plug-in displays proper values for each ONTAP namespace device. 
+. Verify the NetApp plug-in displays proper values for each ONTAP namespace device.
 For example (a),
 +
 ----
@@ -457,7 +457,7 @@ Workaround: If the target LIFs don't show up as above in the `nvme_info` output,
 
 
 | `No discovery log entries to fetch` during  `nvme discover`, `nvme connect`, or `nvme connect-all`
-| This error message is generally seen if the `/etc/nvme/hostnqn` string has not been added to the corresponding subsystem on the NetApp array or an incorrect hostnqn string has been added to the respective subsystem.
+| This error message is generally seen if the `/etc/nvme/hostnqn` string has not been added to the corresponding subsystem on the NetApp array or an incorrect `hostnqn` string has been added to the respective subsystem.
 | Ensure the exact `/etc/nvme/hostnqn` string is added to the corresponding subsystem on the NetApp array (verify through the `vserver nvme subsystem host show`).
 
 |`Failed to write to /dev/nvme-fabrics: Operation already in progress` during `nvme discover`, `nvme connect` or `nvme connect-all`
